# drake

bindings/pydrake/: geometry_py_visualizers.cc
bindings/pydrake/manipulation/: planner_py.cc
bindings/pydrake/multibody/: plant_py.cc
bindings/pydrake/systems/: framework_py_systems.cc
common/trajectories/: piecewise_quaternion.cc  trajectory.cc  trajectory.h
drake/examples/PushPolygon/: PushPolygon.m  miqp_no_rotations.m
drake/examples/SimplePolygonManipulation/: Polygon2DNoRotationVisualizer.m  Polygon2DVisualizer.m
drake/examples/SimplePolygonManipulation/@Polygon2D/: Polygon2D.m  imiqpPlanner.m
drake/examples/SimplePolygonManipulation/@Polygon2DNoRotation/: Polygon2DNoRotation.m  miqpPlanner.m
drake/systems/trajectories/: DTTrajectory.m
drake/util/: drotmat.m
examples/manipulation_station/: BUILD.bazel  end_effector_teleop.py  random_clutter_generator.cc
geometry/: meshcat_point_cloud_visualizer.h  meshcat_visualizer.h
geometry/optimization/: BUILD.bazel  vpolytope.cc  vpolytope.h
geometry/optimization/test/: vpolytope_test.cc
geometry/test/: meshcat_point_cloud_visualizer_test.cc
manipulation/planner/: differential_inverse_kinematics.cc  differential_inverse_kinematics.h
multibody/tree/: mobilizer.h
systems/plants/@RigidBodyManipulator/: computeSpatialAccelerations.m  doKinematics.m  forwardKinV.m  geometricJacobian.m  geometricJacobianDotV.m  relativeTwist.m  transformSpatialAcceleration.m
systems/plants/test/: testManipulatorDynamics.m  testRelativeTwist.m
tools/workspace/: default.bzl
tools/workspace/ibex/: package.BUILD.bazel  repository.bzl
tools/workspace/qhull/: package.BUILD.bazel
